# autocrop-pro

./: .gitignore  LICENSE  PROJECT_REFERENCE.md  README.md  how_it_works_beginner_guide.md  index.html  init_help.txt  package-lock.json  package.json  tailwind.config.js  ts_output.txt  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: FileQueue.tsx  GalleryModal.tsx  OutputsPanel.tsx  PreviewModal.tsx  SettingsPanel.tsx  SettingsSidebar.tsx
src/lib/: media.test.ts  media.ts  processing.test.ts  utils.test.ts
website/: app.js  index.html  llms.txt  pricing.md  robots.txt  sitemap.xml  style.css
