[package]
name = "app"
version = "0.1.0"
description = "AutoCrop Pro: A Tauri App"
# authors = ["you"]
license = "MIT"
# repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
rayon = "1.10"
image = "0.25"
regex = "^1.11"
dirs = "5.0"
tauri-plugin-fs = "2"

# Aggressive optimizations for the production build
[profile.release]
panic = "abort"      # Strip unwind tracing
codegen-units = 1    # Allow maximum cross-crate optimizations
lto = true           # Link Time Optimization
opt-level = "s"      # Optimize for size
strip = true         # Strip symbols from binary

